# leptos-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  dev.sh  post-message.rhai  rustfmt.toml
.github/workflows/: prepare-template.yml
e2e/: package.json  playwright.config.ts
e2e/scripts/: e2e-with-ports.mjs
leptos-app/: Cargo.toml  Trunk.toml  index.html
leptos-app/.cargo/: config.toml
leptos-app/src/: App.css  Chat.css  ChatDebugHeader.css  Header.css  MessageContextMenu.css  MessageInput.css  MessageRow.css  QRCodeModal.css  RoomList.css  chat.rs  chat_debug_header.rs  debug_overlay.rs  editable_text_field.rs  header.rs  index.css  main.rs  message_context_menu.rs  message_input.rs  message_list.rs  message_row.rs  notification_manager.rs  qr_code_modal.rs  room_list.rs
model/: Cargo.toml
